[package]
name = "mpegts"
version = "0.3.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>", "Aleksander Dutkowski"]
description = "MPEG2-TS decoding/encoding library"
homepage = "https://github.com/aleek/mpegts"
repository = "https://github.com/aleek/mpegts"
readme = "README.md"
keywords = ["mpegts"]
license = "MIT"
edition = "2021"

[dependencies]
byteorder = "1"
trackable = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
